--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@reduxjs/toolkit": "^1.8.6",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
@@ -25,7 +26,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "react-navigation-header-buttons": "^9.0.1",
-    "react-redux": "^7.2.6",
+    "react-redux": "^8.0.4",
     "redux": "^4.1.2"
   },
   "devDependencies": {
